# EvidenceBench

./: .gitignore  CASELAW_METHODOLOGY.md  DATA_LICENSE.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: test.yml
data/: case-authorities-v2.json  case-authorities-v3.json  dev-v1.jsonl  doj-nij-post-pcast-2024.json  fre-2025-rules.json  recent-caselaw-2026.json
exports/: latest.json
models/: anthropic-claude-fable-5.json  deepseek-v4-pro.json  google-gemini-3-5-flash.json  mistral-large-3.json  moonshotai-kimi-k3.json  openai-gpt-5-6-sol.json  xai-grok-4-5.json
results/v1.0.0/: README.md  manifest.json
results/v2.0.0/: README.md  manifest.json
results/v3.0.0/: README.md  manifest.json
scripts/: author_holdout.py  build_holdout_v2.py  build_holdout_v3.py  publish_v2_snapshot.py  publish_v3_snapshot.py  sync_data_gov_caselaw.py
src/evidencebench/: __init__.py  citations.py  cli.py  data_gov.py  datasets.py  exporters.py  models.py  runner.py  scoring.py  validation.py
tests/: test_citations.py  test_data_gov.py  test_scoring.py
